<resources>
    <string name="app_name">hakdog</string>
    <string name="image_description">Description for your image</string>
    <string name="image1_description">Description for your image 1</string>
    <string name="image2_description">Description for your image 2</string>
    <string name="image3_description">Description for your image 3</string>
    <string name="image4_description">Description for your image 4</string>
    <string name="image5_description">Description for your image 5</string>
    <string name="image6_description">Description for your image 6</string>
    <string name="image9_description">Description for your image 9</string>
    <string name="image7_description">Description for your image 7</string>
    <string name="image8_description">Description for your image 8</string>
    <string name="image10_description">Description for your image 10</string>

    <string name="button_description">button7</string>
    <string name="button1_description">button4</string>
    <string name="button2_description">button2</string>
    <string name="button3_description">button6</string>
    <string name="button4_description">button3</string>
    <string name="button5_description">button1</string>
    <string name="button6_description">quitbutton</string>
    <string name="button7_description">restartbutton</string>
    <string name="button8_description">answer3</string>
    <string name="button14_description">bgbutton</string>
    <string name="button9_description">answer1</string>
    <string name="button10_description">button5</string>
    <string name="button11_description">button3</string>
    <string name="button12_description">bgbutton2</string>
    <string name="button13_description">bgbutton1</string>
    <string name="button15_description">answer2</string>
    <string name="button16_description">button7</string>

    <string name="time_text">00:00</string>
    <string name="time2_text">00:00</string>
    <string name="time3_text">00:00</string>
    <string name="time4_text">00:00</string>
    <string name="time5_text">00:00</string>
    <string name="time6_text">00:00</string>

</resources>


