<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Results">

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/image5_description"
        app:srcCompat="@drawable/gameover" />

    <ImageButton
        android:id="@+id/imageButton7"
        android:layout_width="144dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button7_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.139"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/restartbutton" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="120dp"
        android:layout_height="48dp"
        android:layout_marginBottom="60dp"
        android:background="#00FFFFFF"
        android:contentDescription="@string/button6_description"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.775"
        app:layout_constraintStart_toEndOf="@+id/imageButton7"
        app:srcCompat="@drawable/quitbutton" />


</androidx.constraintlayout.widget.ConstraintLayout>